Added modal menu to view current skill effects. Adjusted modal menu scaling

--- a/index.html
+++ b/index.html
@@ -477,20 +477,25 @@
 
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
 
+                    <h1 class="info-text-3"><u><b>Master Arts: </b></u></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
 
+                    <h1 class="info-text-3"><u><b>Class Arts: </b></u></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                     
+                    <h1 class="info-text-3"><u><b>Talent Art: </b></u></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
 
+                    <h1 class="info-text-3"><u><b>Fusion Arts: </b></u></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
 
+                    <h1 class="info-text-3"><u><b>Chain Art: </b></u></h1>
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
                 </div>
                 <div id="equipment">
@@ -517,7 +522,7 @@
                     <div class="gemsMenu" id="gemsModal">
                         <div class="gemsMenuContent">
                             <header class="classMenuHeader">
-                                <h2>Menu</h2>
+                                <h2 class="info-text-3">Gems Menu</h2>
                                 <span class="close" id="class-close">&times;</span>
                             </header>
                             <div class="gem-list" id="gemList"></div>
@@ -543,7 +548,7 @@
                     <div class="accessoriesMenu" id="accessoriesModal">
                         <div class="accessoriesMenuContent">
                             <header class="classMenuHeader">
-                                <h2>Menu</h2>
+                                <h2 class="info-text-3">Accessories Menu</h2>
                                 <span class="close" id="class-close">&times;</span>
                             </header>
                             <div class="accessory-list" id="accessoryList"></div>
@@ -558,7 +563,7 @@
                         <div class="classMenu" id="classModal">
                             <div class="classMenuContent">
                                 <header class="classMenuHeader">
-                                    <h2>Menu</h2>
+                                    <h2 class="info-text-3" id="modalHeader">Menu</h2>
                                     <span class="close" id="class-close">&times;</span>
                                 </header>
                                 <div class="class-list" id="classList"></div>
@@ -585,6 +590,7 @@
                         <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 1"></div>
                         <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 2"></div>
                         <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 3"></div>
+                        <div class="showSkillInfo"><img src="img\question.png" alt="Show Skill Info"></div>
                     </div>
                 </div>
                 <div id="arts">
