Added remaining Class descriptions. Added click effects to elements

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
         <section id="statCalculator">
             <section id="party">
                 <div id="characters">
-                    <div class="icon icon-highlight" id="buttonNoah" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Noah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
-                    <div class="icon" id="buttonMio" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Mio"><img src="img\party\MioParty.png" alt="Icon 2"></div>
-                    <div class="icon" id="buttonEunie" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Eunie"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
-                    <div class="icon" id="buttonTaion" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Taion"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
-                    <div class="icon" id="buttonLanz" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Lanz"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
-                    <div class="icon" id="buttonSena" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Sena"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
-                    <div class="icon" id="buttonHero" data-character-type="hero" data-toggle="tooltip" data-placement="bottom" title="Ethel"><img src="img\party\heroes\EthelParty.png" id="buttonHeroImg" alt="Icon 7"></div>
+                    <div class="icon clickButton icon-highlight" id="buttonNoah" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Noah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
+                    <div class="icon clickButton" id="buttonMio" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Mio"><img src="img\party\MioParty.png" alt="Icon 2"></div>
+                    <div class="icon clickButton" id="buttonEunie" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Eunie"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
+                    <div class="icon clickButton" id="buttonTaion" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Taion"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
+                    <div class="icon clickButton" id="buttonLanz" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Lanz"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
+                    <div class="icon clickButton" id="buttonSena" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Sena"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
+                    <div class="icon clickButton" id="buttonHero" data-character-type="hero" data-toggle="tooltip" data-placement="bottom" title="Ethel"><img src="img\party\heroes\EthelParty.png" id="buttonHeroImg" alt="Icon 7"></div>
                 </div>
                 <div id="fr-toggle">
-                    <div class="fr-button" id="fr-toggle-button"><img src="img\fr-toggle.png" alt="Future Redeemed Toggle"></div>
+                    <div class="fr-button clickButton" id="fr-toggle-button"><img src="img\fr-toggle.png" alt="Future Redeemed Toggle"></div>
                 </div>
                 <div id="ouroboros">
-                    <div class="icon" id="buttonNoahOuroboros" data-toggle="tooltip" data-placement="bottom" title="Noah (Ouroboros)"><img src="img\party\ouroboros\NoahOuroborosParty.png" alt="Icon 1"></div>
-                    <div class="icon" id="buttonMioOuroboros" data-toggle="tooltip" data-placement="bottom" title="Mio (Ouroboros)"><img src="img\party\ouroboros\MioOuroborosParty.png" alt="Icon 2"></div>
-                    <div class="icon" id="buttonEunieOuroboros" data-toggle="tooltip" data-placement="bottom" title="Eunie (Ouroboros)"><img src="img\party\ouroboros\EunieOuroborosParty.png" alt="Icon 3"></div>
-                    <div class="icon" id="buttonTaionOuroboros" data-toggle="tooltip" data-placement="bottom" title="Taion (Ouroboros)"><img src="img\party\ouroboros\TaionOuroborosParty.png" alt="Icon 4"></div>
-                    <div class="icon" id="buttonLanzOuroboros" data-toggle="tooltip" data-placement="bottom" title="Lanz (Ouroboros)"><img src="img\party\ouroboros\LanzOuroborosParty.png" alt="Icon 5"></div>
-                    <div class="icon" id="buttonSenaOuroboros" data-toggle="tooltip" data-placement="bottom" title="Sena (Ouroboros)"><img src="img\party\ouroboros\SenaOuroborosParty.png" alt="Icon 6"></div>
+                    <div class="icon clickButton" id="buttonNoahOuroboros" data-toggle="tooltip" data-placement="bottom" title="Noah (Ouroboros)"><img src="img\party\ouroboros\NoahOuroborosParty.png" alt="Icon 1"></div>
+                    <div class="icon clickButton" id="buttonMioOuroboros" data-toggle="tooltip" data-placement="bottom" title="Mio (Ouroboros)"><img src="img\party\ouroboros\MioOuroborosParty.png" alt="Icon 2"></div>
+                    <div class="icon clickButton" id="buttonEunieOuroboros" data-toggle="tooltip" data-placement="bottom" title="Eunie (Ouroboros)"><img src="img\party\ouroboros\EunieOuroborosParty.png" alt="Icon 3"></div>
+                    <div class="icon clickButton" id="buttonTaionOuroboros" data-toggle="tooltip" data-placement="bottom" title="Taion (Ouroboros)"><img src="img\party\ouroboros\TaionOuroborosParty.png" alt="Icon 4"></div>
+                    <div class="icon clickButton" id="buttonLanzOuroboros" data-toggle="tooltip" data-placement="bottom" title="Lanz (Ouroboros)"><img src="img\party\ouroboros\LanzOuroborosParty.png" alt="Icon 5"></div>
+                    <div class="icon clickButton" id="buttonSenaOuroboros" data-toggle="tooltip" data-placement="bottom" title="Sena (Ouroboros)"><img src="img\party\ouroboros\SenaOuroborosParty.png" alt="Icon 6"></div>
                 </div>
                 <h1 class="info-text-3" id="current-character-name">Noah</h1>
             </section>
@@ -468,7 +468,7 @@
                     </div>
                 </div>
                 <div id="damageNumbers">
-                    <span id="calc-button" class="calc-button badge badge-success">
+                    <span id="calc-button" class="calc-button badge badge-success clickButton">
                         <div id="loadingIcon" class="spinner-border text-light" style="width: 1.5rem; height: 1.5rem; display: none;" role="status">
                             <span class="sr-only">Loading...</span>
                         </div>
@@ -503,53 +503,53 @@
                         <div class="gemContainer">
                             <h1 class="info-text-3 gem-text">None</h1>
                             <h1 class="info-text-3 gem-description"></h1>
-                            <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
-                            <span class="gem-remove" id="gem-1-remove">&times;</span>
+                            <div class="gem clickButton"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
+                            <span class="gem-remove clickButton" id="gem-1-remove">&times;</span>
                         </div>
                         <div class="gemContainer">
                             <h1 class="info-text-3 gem-text">None</h1>
                             <h1 class="info-text-3 gem-description"></h1>
-                            <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
-                            <span class="gem-remove" id="gem-2-remove">&times;</span>
+                            <div class="gem clickButton"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
+                            <span class="gem-remove clickButton" id="gem-2-remove">&times;</span>
                         </div>
                         <div class="gemContainer">
                             <h1 class="info-text-3 gem-text">None</h1>
                             <h1 class="info-text-3 gem-description"></h1>
-                            <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
-                            <span class="gem-remove" id="gem-3-remove">&times;</span>
+                            <div class="gem clickButton"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
+                            <span class="gem-remove clickButton" id="gem-3-remove">&times;</span>
                         </div>
                     </div>
                     <div class="gemsMenu" id="gemsModal">
                         <div class="gemsMenuContent">
                             <header class="classMenuHeader">
                                 <h2 class="info-text-3">Gems Menu</h2>
-                                <span class="close" id="class-close">&times;</span>
+                                <span class="close clickButton" id="class-close">&times;</span>
                             </header>
                             <div class="gem-list" id="gemList"></div>
                         </div>
                     </div>
                     <div id="accessories">
                         <div class="accessory-container">
-                            <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 1"></div>
+                            <div class="accessory clickButton"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 1"></div>
                             <h1 class="info-text-3 accessory-description"></h1>
-                            <span class="accessory-remove" id="accessory-1-remove">&times;</span>
+                            <span class="accessory-remove clickButton" id="accessory-1-remove">&times;</span>
                         </div>
                         <div class="accessory-container">
-                            <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 2"></div>
+                            <div class="accessory clickButton"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 2"></div>
                             <h1 class="info-text-3 accessory-description"></h1>
-                            <span class="accessory-remove" id="accessory-2-remove">&times;</span>
+                            <span class="accessory-remove clickButton" id="accessory-2-remove">&times;</span>
                         </div>
                         <div class="accessory-container">
-                            <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 3"></div>
+                            <div class="accessory clickButton"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 3"></div>
                             <h1 class="info-text-3 accessory-description"></h1>
-                            <span class="accessory-remove" id="accessory-3-remove">&times;</span>
+                            <span class="accessory-remove clickButton" id="accessory-3-remove">&times;</span>
                         </div>
                     </div>
                     <div class="accessoriesMenu" id="accessoriesModal">
                         <div class="accessoriesMenuContent">
                             <header class="classMenuHeader">
                                 <h2 class="info-text-3">Accessories Menu</h2>
-                                <span class="close" id="class-close">&times;</span>
+                                <span class="close clickButton" id="class-close">&times;</span>
                             </header>
                             <div class="accessory-list" id="accessoryList"></div>
                         </div>
@@ -559,7 +559,7 @@
             <section id="bottom">
                 <div id="info">
                     <div id="class">
-                        <div class="classIcon" id="classButton"><img src="img\classes\class-slot.png" alt="Class Icon"></div>
+                        <div class="classIcon clickButton" id="classButton"><img src="img\classes\class-slot.png" alt="Class Icon"></div>
                         <div class="classMenu" id="classModal">
                             <div class="classMenuContent">
                                 <header class="classMenuHeader">
@@ -587,24 +587,24 @@
                         <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="Inspirit"><img src="img\skills\skill-11.png" alt="Class Skill 4"></div>
                     </div>
                     <div id="masterSkills">
-                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 1"></div>
-                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 2"></div>
-                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 3"></div>
-                        <div class="showSkillInfo"><img src="img\question.png" alt="Show Skill Info"></div>
+                        <div class="skillSlot clickButton" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 1"></div>
+                        <div class="skillSlot clickButton" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 2"></div>
+                        <div class="skillSlot clickButton" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 3"></div>
+                        <div class="showSkillInfo clickButton"><img src="img\question.png" alt="Show Skill Info"></div>
                     </div>
                 </div>
                 <div id="arts">
                     <div id="masterArts">
                         <div id="artContainerLeft">
-                            <div class="artSlot" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 1"></div>
+                            <div class="artSlot clickButton" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 1"></div>
                             <h1 class="info-text-arts">Blank</h1>
                         </div>
                         <div id="artContainerRight">
-                            <div class="artSlot" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 2"></div>
+                            <div class="artSlot clickButton" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 2"></div>
                             <h1 class="info-text-arts">Blank</h1>
                         </div>
                         <div id="artContainerLeft">
-                            <div class="artSlot" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 3"></div>
+                            <div class="artSlot clickButton" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 3"></div>
                             <h1 class="info-text-arts">Blank</h1>
                         </div>
                     </div>
@@ -612,26 +612,26 @@
                         <div id="normalArts">
                             <div id="artContainerRight">
                                 <h1 class="info-text-arts">Blank</h1>
-                                <div class="artSlot" id="art-class-1" data-art-type="class" alt="Class Art 1">
+                                <div class="artSlot clickButton" id="art-class-1" data-art-type="class" alt="Class Art 1">
                                     <img class="art-features" src="img\arts\recharge\art-keves.png">
                                 </div>
                             </div>
                             <div id="artContainerLeft">
                                 <h1 class="info-text-arts">Blank</h1>
-                                <div class="artSlot" id="art-class-2" data-art-type="class" alt="Class Art 2">
+                                <div class="artSlot clickButton" id="art-class-2" data-art-type="class" alt="Class Art 2">
                                     <img class="art-features" src="img\arts\recharge\art-keves.png">
                                 </div>
                             </div>
                             <div id="artContainerRight">
                                 <h1 class="info-text-arts">Blank</h1>
-                                <div class="artSlot" id="art-class-3" data-art-type="class" alt="Class Art 3">
+                                <div class="artSlot clickButton" id="art-class-3" data-art-type="class" alt="Class Art 3">
                                     <img class="art-features" src="img\arts\recharge\art-keves.png">
                                 </div>
                             </div>
                         </div>
                         <div id="artContainerTalent">
                             <div id="talentArt">
-                                <div class="talentSlot" id="talentArtIcon">
+                                <div class="talentSlot clickButton" id="talentArtIcon">
                                     <img src="img\arts\recharge\art-keves.png" alt="Talent Art">
                                 </div>
                                 <h1 class="info-text-arts">Blank</h1>
@@ -639,7 +639,7 @@
                         </div>
                     </div>
                 </div>
-                <img class="tour-start" id="startTour" src="img/tour/tour-start.png" alt="Start Tour">
+                <img class="tour-start clickButton" id="startTour" src="img/tour/tour-start.png" alt="Start Tour">
             </section>
         </section>
 
