Added additional Master Skill effects

--- a/index.html
+++ b/index.html
@@ -401,6 +401,10 @@
                                     <h1 class="info-text-3 smaller-text">Blocked: </h1>
                                     <div class="buffIcon" id="enemyBlocked"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Blocked?" alt="Blocked"></div>
                                 </div>
+                                <div class="horizontal-fields">
+                                    <h1 class="info-text-3 smaller-text">Enemy Performing Art: </h1>
+                                    <div class="buffIcon" id="performingArt"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Enemy Performing Art?" alt="Enemy Performing Art"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
