--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/@sjmc11/tourguidejs/dist/css/tour.min.css">
         <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+        <title>XC3 Stat Calculator</title>
+        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     </head>
     <body>
         <section id="statCalculator">
