Added menu to view info of currently equipped Arts

--- a/index.html
+++ b/index.html
@@ -650,6 +650,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="showArtInfo clickButton"><img src="img\question.png" alt="Show Art Info"></div>
                 </div>
                 <img class="tour-start clickButton" id="startTour" src="img/tour/tour-start.png" alt="Start Tour">
             </section>
