Added additional flags and Soulhacker Skill effects

--- a/index.html
+++ b/index.html
@@ -409,6 +409,18 @@
                                         <h1 class="info-text-3 smaller-text">Enemy Performing Art: </h1>
                                         <div class="buffIcon" id="performingArt"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Enemy Performing Art?" alt="Enemy Performing Art"></div>
                                     </div>
+                                    <div class="horizontal-fields">
+                                        <h1 class="info-text-3 smaller-text">Quick Move Used: </h1>
+                                        <div class="buffIcon" id="quickMove"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Quick Move Used?" alt="Quick Move Used"></div>
+                                    </div>
+                                    <div class="horizontal-fields">
+                                        <h1 class="info-text-3 smaller-text">In Water: </h1>
+                                        <div class="buffIcon" id="inWater"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="In Water?" alt="In Water"></div>
+                                    </div>
+                                    <div class="horizontal-fields">
+                                        <h1 class="info-text-3 smaller-text">On Land: </h1>
+                                        <div class="buffIcon" id="onLand"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="On Land?" alt="On Land"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
